@@ -1,0 +1,3 @@
+Remove unused license definitions for BSL-1.
+Certainty: certain
+Fixed-Lintian-Tags: unused-license-paragraph-in-dep5-copyright
